code (core): added core functionality for poola

--- a/settings.ini
+++ b/settings.ini
@@ -1,18 +1,18 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = poola
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = {user}
-# description = A description of your project
-# keywords = some keywords
-author = {author}
-author_email = {author_email}
-# copyright = Put your copyright information here
-branch = {branch}
+user = gpp-rnd
+description = Python package to analyze the results of pooled CRISPR screens
+keywords = CRISPR, python
+author = Peter DeWeirdt
+author_email = petedeweirdt@gmail.com
+copyright = Peter DeWeirdt
+branch = master
 version = 0.0.1
 min_python = 3.6
 audience = Developers
