code (testing): setting up infrastructure for CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
       run: |
         pip install nbdev jupyter
         pip install -e .
+        pip install -r requirements.txt
     - name: Read all notebooks
       run: |
         nbdev_read_nbs
