bug (packages): add statsmodels and scipy to requirements

--- a/settings.ini
+++ b/settings.ini
@@ -15,7 +15,7 @@ language = English
 custom_sidebar = False
 license = apache2
 status = 2
-requirements = numpy>=1.19.5 pandas>=1.0.0 scikit-learn>=0.24.1
+requirements = numpy>=1.19.5 pandas>=1.0.0 scikit-learn>=0.24.1 scipy>=1.5.2 statsmodels>=0.12.2
 nbs_path = .
 doc_path = docs
 recursive = False
