added code to calculate hypergeometric p-values

--- a/settings.ini
+++ b/settings.ini
@@ -4,11 +4,11 @@ lib_name = poola
 user = gpp-rnd
 description = Python package to analyze the results of pooled CRISPR screens
 keywords = CRISPR, python
-author = Peter DeWeirdt
-author_email = petedeweirdt@gmail.com
+author = Peter DeWeirdt, Mudra Hegde
+author_email = petedeweirdt@gmail.com, mudrahegde@gmail.com
 copyright = Peter DeWeirdt
 branch = master
-version = 0.0.13
+version = 0.0.14
 min_python = 3.6
 audience = Developers
 language = English
